--- a/AppWeb/templates/clientes.html
+++ b/AppWeb/templates/clientes.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clientes</title>
-  </head>
+{% extends 'padre.html' %} {% block contenidoQueCambia %}
 
-  </body>
-</html>
+<h3>Clientes</h3>
+
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore facere maxime
+</p>
+
+{% endblock contenidoQueCambia %}
