reorden de  vistas y navbar

--- a/AppWeb/templates/inicio.html
+++ b/AppWeb/templates/inicio.html
@@ -3,7 +3,7 @@
 <h3>Inicio</h3>
 
 <p>
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore facere maxime
+  Esta es el inicio del sitio
 </p>
 
 {% endblock contenidoQueCambia %}
