--- a/AppWeb/templates/navbar.html
+++ b/AppWeb/templates/navbar.html
@@ -17,20 +17,20 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ms-auto py-4 py-lg-0">
         <li class="nav-item">
-          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Productos' %}"
+          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'ListaProductos' %}"
             >Productos</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Categorias' %}"
+          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'ListaCategorias' %}"
             >Categorias</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Clientes' %}">Clientes</a>
+          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'ListaClientes' %}">Clientes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Ordenes' %}">Ordenes</a>
+          <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'ListaOrdenes' %}">Ordenes</a>
         </li>
       </ul>
     </div>
