--- a/AppWeb/templates/busqueda_cliente.html
+++ b/AppWeb/templates/busqueda_cliente.html
@@ -4,6 +4,8 @@
   
 <form action="{% url 'BuscarCliente' %}" method="get">
 
+  <h3>Buscar un cliente:</h3>
+
   <p>Numero de telefono del cliente: <input type="text" name="numero_telefono"></p>
 
   <button type="submit"> Buscar </button>
