--- a/AppWeb/templates/cliente_formulario.html
+++ b/AppWeb/templates/cliente_formulario.html
@@ -4,6 +4,8 @@
   
 <form action="{% url 'ClienteFormulario' %}" method="post">{% csrf_token %}
 
+  <h3>Agregar un cliente:</h3>
+
   {{miFormulario.as_p}}
 
   <button type="submit"> Crear </button>
